@@ -1,11 +1,12 @@
 package com.epam.esm;
 
+import com.epam.esm.dto.PagedDTO;
 import com.epam.esm.entity.Tag;
 import com.epam.esm.exception.*;
 import com.epam.esm.repository.TagRepository;
 import com.epam.esm.service.TagService;
 import com.epam.esm.service.impl.TagServiceImpl;
-import com.epam.esm.validator.TagValidator;
+import com.epam.esm.validator.impl.TagValidator;
 import static org.junit.jupiter.api.Assertions.*;
 
 import org.junit.jupiter.api.*;
@@ -14,8 +15,8 @@ import org.mockito.Mock;
 import org.mockito.Mockito;
 import static org.mockito.Mockito.*;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.hateoas.PagedModel;
 
-import java.util.Collections;
 import java.util.List;
 
 
@@ -27,8 +28,8 @@ public class TagServiceTest {
 
     TagService tagService;
 
-    private final static int CORRECT_ID_VALUE = 1;
-    private final static int NOT_EXIST_ID_VALUE = 999;
+    private final static Long CORRECT_ID_VALUE = 1L;
+    private final static Long NOT_EXIST_ID_VALUE = 999L;
 
     @BeforeEach
     void init(){
@@ -41,7 +42,7 @@ public class TagServiceTest {
         @Test
         void correctGettingByIdShouldReturnTag() throws RepositoryException, ServiceException {
             Tag expected = new Tag(CORRECT_ID_VALUE,"name");
-            when(tagRepository.getById(Mockito.anyInt())).thenReturn(expected);
+            when(tagRepository.getById(Mockito.anyLong())).thenReturn(expected);
             assertEquals(expected, tagService.getById(CORRECT_ID_VALUE));
             verify(tagRepository).getById(CORRECT_ID_VALUE);
         }
@@ -56,10 +57,10 @@ public class TagServiceTest {
         @Test
         void gettingWithIncorrectIdShouldRaiseException() throws RepositoryException {
             assertAll(
-                    () -> assertThrows(IncorrectDataServiceException.class,() -> tagService.getById(-1)),
+                    () -> assertThrows(IncorrectDataServiceException.class,() -> tagService.getById(-1L)),
                     () -> assertThrows(IncorrectDataServiceException.class,() -> tagService.getById(null))
             );
-            verify(tagRepository, never()).getById(any(Integer.class));
+            verify(tagRepository, never()).getById(any(Long.class));
         }
     }
 
@@ -82,24 +83,25 @@ public class TagServiceTest {
         @Test
         void gettingWithIncorrectIdShouldRaiseException() throws RepositoryException {
             assertAll(
-                    () -> assertThrows(IncorrectDataServiceException.class,() -> tagService.delete(-1)),
+                    () -> assertThrows(IncorrectDataServiceException.class,() -> tagService.delete(-1L)),
                     () -> assertThrows(IncorrectDataServiceException.class,() -> tagService.delete(null))
             );
-            verify(tagRepository, never()).delete(any(Integer.class));
+            verify(tagRepository, never()).delete(any(Long.class));
         }
     }
 
     @Nested
-    class GetAllTests {
+    class GetTagsTests {
 
         @Test
-        void correctGettingAllShouldReturnListOfTags(){
-            List<Tag> expected = List.of(new Tag(1,"name1"), new Tag(2,"name2"), new Tag(3,"name3")) ;
-            List<Tag> emptyList = Collections.emptyList();
-            doReturn(expected, emptyList).when(tagRepository).getAll();
-            assertEquals(expected, tagService.getAll());
-            assertEquals(emptyList, tagService.getAll());
-            verify(tagRepository, times(2)).getAll();
+        void correctGettingAllShouldReturnListOfTags() throws RepositoryException, ServiceException{
+            PagedDTO<Tag> expectedTagsDto = new PagedDTO<>(List.of(new Tag(1L,"name1"), new Tag(2L,"name2"),
+                    new Tag(3L,"name3")),new PagedModel.PageMetadata(1,1,1));
+            PagedDTO<Tag> emptyPagedDto = new PagedDTO<>();
+            doReturn(expectedTagsDto, emptyPagedDto).when(tagRepository).get(anyString(), anyInt(), anyInt());
+            assertEquals(expectedTagsDto, tagService.get("",1,1));
+            assertTrue(tagService.get("",1,1).isEmpty());
+            verify(tagRepository, times(2)).get(anyString(), anyInt(), anyInt());
         }
 
     }
